--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 <ul id="nav_desktop_cont" class="hide-on-med-and-down brand-logo center">
                   <li><a href="#!">Humor</a></li>
                   <li><a href="#!">Belleza</a></li>
-                  <li id="logo_nav">  <img src="img/template/logo_media_moob.jpg" class="img_logo_head" />  </li>
+                  <!--li id="logo_nav">  <img src="img/template/logo_media_moob.jpg" class="img_logo_head" />  </li-->
                   <li><a href="#!">Música</a></li>
                   <li><a href="#!">Gamers</a></li>
+                  <li><a href="#!">ClubMediaFest</a></li>
                 </ul>
 
 
@@ -104,42 +105,58 @@
            </div>
         </div>
 
+
+        
+
+        <!-- ...............................modulo dinamico de destacados.............................................-->
         <div id="cont_destacado_header" class="col s12 m12 l12">
           <ul class="row">
             <li class="col s12 m6 l3">
                 <div class="cont_destacado_header_moduloCont">
-                    <img src="img/template/destacado01.jpg"/>
-                    <div class="cont_info_destacado_header">
-                      <div class="cont_destacado_header_moduloCont_item1" style="background:#f4206a; color:#fff;">Belleza</div>
-                      <p>Probó los productos de belleza y ella misma te muestra los resultados.</p>
-                    </div>
+                    <a href="#!" target="_self" title="">
+                        <img src="img/template/destacado01.jpg"/>
+                        <div class="cont_destacado_header_moduloCont_fondo_opacity1"></div>
+                        <div class="cont_info_destacado_header">
+                          <div class="cont_destacado_header_moduloCont_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                          <p>Probó los productos de belleza y ella misma te muestra los resultados.</p>
+                        </div>
+                    </a>
                 </div>
             </li>
             <li class="col s12 m6 l3">
                 <div class="cont_destacado_header_moduloCont">
-                    <img src="img/template/destacado02.jpg"/>
-                    <div class="cont_info_destacado_header">
-                      <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
-                      <p>Dai Hernández trollea a los artistas con la broma de Fernet Branca.</p>
-                    </div>
+                    <a href="#!" target="_self" title="">
+                        <img src="img/template/destacado02.jpg"/>
+                        <div class="cont_destacado_header_moduloCont_fondo_opacity2"></div>
+                        <div class="cont_info_destacado_header">
+                          <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
+                          <p>Dai Hernández trollea a los artistas con la broma de Fernet Branca.</p>
+                        </div>
+                    </a>
                 </div>
             </li>
             <li class="col s12 m6 l3">
                 <div class="cont_destacado_header_moduloCont">
-                    <img src="img/template/destacado03.jpg"/>
-                    <div class="cont_info_destacado_header">
-                      <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
-                      <p>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</p>
-                    </div>
+                    <a href="#!" target="_self" title="">
+                        <img src="img/template/destacado03.jpg"/>
+                        <div class="cont_destacado_header_moduloCont_fondo_opacity3"></div>
+                        <div class="cont_info_destacado_header">
+                          <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
+                          <p>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</p>
+                        </div>
+                    </a>
                 </div>
             </li>
             <li class="col s12 m6 l3">
                 <div class="cont_destacado_header_moduloCont">
-                    <img src="img/template/destacado04.jpg"/>
-                    <div class="cont_info_destacado_header">
-                      <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
-                      <p>ElRubius se busca en Google y no puede creer lo que dicen de él.</p>
-                    </div>
+                    <a href="#!" target="_self" title="">
+                        <img src="img/template/destacado04.jpg"/>
+                        <div class="cont_destacado_header_moduloCont_fondo_opacity4"></div>
+                        <div class="cont_info_destacado_header">
+                          <div class="cont_destacado_header_moduloCont_item1" style="background:#ffff01; color:#333;">Humor</div>
+                          <p>ElRubius se busca en Google y no puede creer lo que dicen de él.</p>
+                        </div>
+                    </a>
                 </div>
             </li>
           </ul>
