--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
                 <!-- ..............nav mobile............. -->
                 <ul class="side-nav" id="mobile-nav">
-                  <li><a href="#">Humor</a></li>
-                  <li><a href="#">Belleza</a></li>
-                  <li><a href="#">Música</a></li>
-                  <li><a href="#">Gamers</a></li>
+                  <li><a href="#!"><img src="img/template/logo_media_moob.jpg" class="img_logo_head_mobile_sidenav" /></a></li>
+                  <li><a href="#!">Humor</a></li>
+                  <li><a href="#!">Belleza</a></li>
+                  <li><a href="#!">Música</a></li>
+                  <li><a href="#!">Gamers</a></li>
+                  <li><a href="#!">ClubMediaFest</a></li>
                 </ul>
 
           </div>
@@ -106,7 +108,7 @@
         </div>
 
 
-        
+
 
         <!-- ...............................modulo dinamico de destacados.............................................-->
         <div id="cont_destacado_header" class="col s12 m12 l12">
@@ -297,46 +299,167 @@
            <div id="contModalResult" class="row">
              <div class="fila1">
                    <!-- ................3 videos chicos................. -->
-                   <div class="contChicoResult col s12 m4 l4">
-
+                   <div class="contChicoResult col s12 m12 l4">
+                           <div class="contChicoResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video01.jpg"/>
+                                   <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                   <div class="contChicoResult_moduloContfondo_cont_info">
+                                     <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
-                   <div class="contChicoResult col s12 m4 l4">
-
+                   <div class="contChicoResult col s12 m12 l4">
+                           <div class="contChicoResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video02.jpg"/>
+                                   <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                   <div class="contChicoResult_moduloContfondo_cont_info">
+                                     <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#fc4300; color:#fff;">Gamer</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
-                   <div class="contChicoResult col s12 m4 l4">
-
+                   <div class="contChicoResult col s12 m12 l4">
+                           <div class="contChicoResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video03.jpg"/>
+                                   <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                   <div class="contChicoResult_moduloContfondo_cont_info">
+                                     <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#fc4300; color:#fff;">Gamer</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
-                   <!-- ............................. -->
-                   <div class="contGrandeResult col s12 m8 l8">
-
+                   <!-- ..........................contenedor grande.......................... -->
+                   <div class="contGrandeResult col s12 m12 l8">
+                           <div class="contGrandeResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video05.jpg"/>
+                                   <div class="contGrandeResult_moduloContfondo_opacity"></div>
+                                   <div class="contGrandeResult_moduloContfondo_cont_info">
+                                     <div class="contGrandeResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
-                   <div class="contChicoResult col s12 m4 l4">
-
+                   <div class="contChicoResult col s12 m12 l4">
+                           <div class="contChicoResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video04.jpg"/>
+                                   <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                   <div class="contChicoResult_moduloContfondo_cont_info">
+                                     <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#feff00; color:#333;">Humor</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
-                   <div class="contChicoResult col s12 m4 l4">
-
+                   <div class="contChicoResult col s12 m12 l4">
+                           <div class="contChicoResult_moduloCont">
+                               <a href="#!" target="_self" title="">
+                                   <img src="img/template/video01.jpg"/>
+                                   <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                   <div class="contChicoResult_moduloContfondo_cont_info">
+                                     <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                     <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                     <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                   </div>
+                               </a>
+                           </div>
                    </div>
             </div>
             <div class="fila2">
                   <!-- ................3 videos chicos................. -->
                   <div class="contChicoResult col s12 m4 l4">
-
+                        <div class="contChicoResult_moduloCont">
+                            <a href="#!" target="_self" title="">
+                                <img src="img/template/video01.jpg"/>
+                                <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                <div class="contChicoResult_moduloContfondo_cont_info">
+                                  <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                  <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                  <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                </div>
+                            </a>
+                        </div>
                   </div>
                   <div class="contChicoResult col s12 m4 l4">
-
+                        <div class="contChicoResult_moduloCont">
+                            <a href="#!" target="_self" title="">
+                                <img src="img/template/video02.jpg"/>
+                                <div class="contChicoResult_moduloContfondo_opacity"></div>
+                                <div class="contChicoResult_moduloContfondo_cont_info">
+                                  <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                  <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                  <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                </div>
+                            </a>
+                        </div>
                   </div>
                   <div class="contChicoResult col s12 m4 l4">
-
+                      <div class="contChicoResult_moduloCont">
+                          <a href="#!" target="_self" title="">
+                              <img src="img/template/video03.jpg"/>
+                              <div class="contChicoResult_moduloContfondo_opacity"></div>
+                              <div class="contChicoResult_moduloContfondo_cont_info">
+                                <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                              </div>
+                          </a>
+                      </div>
                   </div>
                   <!-- ............................. -->
                   <div class="contChicoResult col s12 m4 l4">
+                      <div class="contChicoResult_moduloCont">
+                          <a href="#!" target="_self" title="">
+                              <img src="img/template/video04.jpg"/>
+                              <div class="contChicoResult_moduloContfondo_opacity"></div>
+                              <div class="contChicoResult_moduloContfondo_cont_info">
+                                <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                              </div>
+                          </a>
+                      </div>
 
                   </div>
                   <div class="contGrandeResult contGrandeResult_2b col s12 m8 l8">
-
+                        <div class="contGrandeResult_moduloCont">
+                            <a href="#!" target="_self" title="">
+                                <img src="img/template/video05.jpg"/>
+                                <div class="contGrandeResult_moduloContfondo_opacity"></div>
+                                <div class="contGrandeResult_moduloContfondo_cont_info">
+                                  <div class="contGrandeResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                  <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                  <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                                </div>
+                            </a>
+                        </div>
                   </div>
                   <div class="contChicoResult  col s12 m4 l4">
-
+                      <div class="contChicoResult_moduloCont">
+                          <a href="#!" target="_self" title="">
+                              <img src="img/template/video04.jpg"/>
+                              <div class="contChicoResult_moduloContfondo_opacity"></div>
+                              <div class="contChicoResult_moduloContfondo_cont_info">
+                                <div class="contChicoResult_moduloContfondo_cont_info_item1" style="background:#f4206a; color:#fff;">Belleza</div>
+                                <h1>Ellos la rompen en las redes y en la TV. Mirá el backstage acá.</h1>
+                                <p>Aprendé sobre moda, look, uñas, tendencias, makeup con las mejores de toda habla hispana.</p>
+                              </div>
+                          </a>
+                      </div>
                   </div>
 
            </div>
@@ -433,7 +556,6 @@
 </div><!-- fin cont1 -->
 
 
-
     <script src="js/jquery-3.1.1.min.js"></script>
     <!--script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script-->
     <script src="js/handlebars-v4.0.5.js"></script>
@@ -443,6 +565,10 @@
 
     <script src="js/app.js"></script>
     <script src="js/function5.js"></script>
+
+    <script>
+
+    </script>
 
 </body>
 </html>
